--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <body>
 <h2>THis is heading 2 and editing from website</h2>
 Hi this is piyush commiting 2nd time
+hi editing from 3rd commit
+
 </body>
 </html>
