--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 Hi this is piyush commiting 2nd time
 hi editing from 3rd commit
 You are doing good piyush keep it up.
+<h3>Now it should be merged</h3>
 </body>
 </html>
