--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@ hi editing from 3rd commit
 You are doing good piyush keep it up.
 <h3>Now it should be merged</h3>
 <h4>Need to merge</h4>
+
+<h5>Both sided editing</h5>
 </body>
 </html>
